--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -24,18 +24,23 @@ stages:
   jobs:
   - job: Build
     steps:
-    - task: DotNetCoreCLI@2
-      inputs:
-        command: restore
-        projects: '$(sourceProject)'
-        feedsToUse: 'select'
-      displayName: "Restore source project's NuGet package(s)"
-    - task: DotNetCoreCLI@2
-      inputs:
-        command: build
-        projects: '$(sourceProject)'
-        arguments: '--configuration $(buildConfiguration)'
-      displayName: "Build source project"
+      - task: UseDotNet@2
+        displayName: Use .NET 3.1 SDK
+        inputs:
+          version: 3.1.x
+          packageType: sdk
+      - task: DotNetCoreCLI@2
+        displayName: "Restore source project's NuGet package(s)"
+        inputs:
+          command: restore
+          projects: '$(sourceProject)'
+          feedsToUse: 'select'
+      - task: DotNetCoreCLI@2
+        displayName: "Build source project"
+        inputs:
+          command: build
+          projects: '$(sourceProject)'
+          arguments: '--configuration $(buildConfiguration)'
 
 - stage: Test_stage
   condition: and(not(failed('Build_stage')), in(variables['Build.Reason'], 'IndividualCI', 'BatchedCI', 'PullRequest'))
@@ -45,6 +50,11 @@ stages:
   jobs:
   - job: Test
     steps:
+      - task: UseDotNet@2
+        displayName: Use .NET 3.1 SDK
+        inputs:
+          version: 3.1.x
+          packageType: sdk
       - task: DotNetCoreCLI@2
         inputs:
           command: test
@@ -68,8 +78,14 @@ stages:
   jobs:
   - job: Publish
     steps:
+      - task: UseDotNet@2
+        displayName: Use .NET 3.1 SDK
+        inputs:
+          version: 3.1.x
+          packageType: sdk
       - task: PowerShell@2
         name: Fetch_Nuget_Ver
+        displayName: "Fetch version number from Directory.Build.props file"
         inputs:
           pwsh: true
           targetType: inline
@@ -79,7 +95,6 @@ stages:
             echo "##vso[task.setvariable variable=NugetVerMinor;]$($packageVer.Minor)"
             echo "##vso[task.setvariable variable=NugetVerPatch;]$($packageVer.Patch)"
             echo "##vso[task.setvariable variable=NugetVerRevis;]$($packageVer.Patch)"
-        displayName: "Fetch version number from Directory.Build.props file"
       - task: DotNetCoreCLI@2
         inputs:
           command: pack
@@ -96,7 +111,7 @@ stages:
       - task: NuGetCommand@2
         inputs:
           command: push
-          packagesToPush: '$(Pipeline.Workspace)/**/*.nupkg'
+          packagesToPush: '$(Build.ArtifactStagingDirectory)/**/*.nupkg;$(Build.ArtifactStagingDirectory)/**/*.snupkg;!$(Build.ArtifactStagingDirectory)/**/*.symbols.nupkg'
           nuGetFeedType: 'internal'
           publishVstsFeed: 'GranDen'
           allowPackageConflicts: true
