Refine test & remove generate doc xml file.

--- a/.gitignore
+++ b/.gitignore
@@ -590,4 +590,5 @@ fabric.properties
 # Backup folder for Package Reference Convert tool in Visual Studio 2017
 
 # End of https://www.gitignore.io/api/rider,csharp,visualstudio,visualstudiocode
-src/GranDen.GameLib.Bingo/GranDen.GameLib.Bingo.xml
+
+src/GranDen.TimeLib.ClockShaft/GranDen.TimeLib.ClockShaft.xml
