--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,8 +1,8 @@
 <Project>
   <PropertyGroup>
-    <Version Condition=" '$(Version)'=='' ">1.0.0</Version>
-    <PackageReleaseNotes>1.0.0 : 
-      &#xD;&#xA;Initial release
+    <Version Condition=" '$(Version)'=='' ">1.0.1</Version>
+    <PackageReleaseNotes>1.0.1 : 
+      &#xD;&#xA;Add ASP.NET Core Options pattern configuration package.
       &#xD;&#xA;
     </PackageReleaseNotes>
   </PropertyGroup>
