Add web app and generic host examples

--- a/test/ClockShaftTest/ClockShaftTest.csproj
+++ b/test/ClockShaftTest/ClockShaftTest.csproj
@@ -27,7 +27,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\..\src\GranDen.TimeLib.ClockShaft.Options\GranDen.TimeLib.ClockShaft.Options.csproj" />
+    <ProjectReference Include="..\..\src\GranDen.TimeLib.ClockShaft\GranDen.TimeLib.ClockShaft.csproj" />
+    <ProjectReference Include="..\TestUtil\TestUtil.csproj" />
   </ItemGroup>
 
   <ItemGroup>
