--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -74,6 +74,8 @@ stages:
       - Build_stage
       - Test_stage
     displayName: Publish debug version NuGet package(s)
+    pool:
+      vmImage: windows-latest
     jobs:
       - job: Publish
         steps:
@@ -83,7 +85,6 @@ stages:
               version: 3.1.x
               packageType: sdk
           - task: PowerShell@2
-            name: Fetch_Nuget_Ver
             displayName: Fetch version number from Directory.Build.props file
             inputs:
               pwsh: true
@@ -104,6 +105,7 @@ stages:
                 echo "##vso[task.setvariable
                 variable=NugetVerRevis;]$($packageVer.Patch)"
           - task: DotNetCoreCLI@2
+            displayName: Pack test NuGet package(s)
             inputs:
               command: pack
               packagesToPack: $(sourceProject)
@@ -115,8 +117,8 @@ stages:
               majorVersion: $(NugetVerMajor)
               minorVersion: $(NugetVerMinor)
               patchVersion: $(NugetVerPatch)
-            displayName: Pack test NuGet package(s)
           - task: DotNetCoreCLI@2
+            displayName: Publish test NuGet package to Azure Artifacts
             inputs:
               command: push
               packagesToPush: >-
@@ -124,6 +126,8 @@ stages:
               nuGetFeedType: internal
               publishVstsFeed: GranDen
           - task: PublishSymbols@2
+            displayName: 'Publish pdb file(s)'
             inputs:
-              searchPattern: '**/bin/Debug/**/*.pdb'
-            displayName: Publish test NuGet package to Azure Artifacts
+              IndexSources: false,
+              SearchPattern: '**/src/**/bin/**/*.pdb'
+              SymbolServerType: TeamServices
