--- a/src/GranDen.TimeLib.ClockShaft.Options/GranDen.TimeLib.ClockShaft.Options.csproj
+++ b/src/GranDen.TimeLib.ClockShaft.Options/GranDen.TimeLib.ClockShaft.Options.csproj
@@ -1,47 +1,55 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
-    <PropertyGroup>
-        <TargetFramework>netcoreapp3.1</TargetFramework>
-        <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
-        <Title>DateTime Utility</Title>
-        <Copyright>Copyright (c) 2020 GranDen Corp.(狂點軟體開發)</Copyright>
-        <PackageLicenseExpression>MIT</PackageLicenseExpression>
-        <RepositoryType>git</RepositoryType>
-        <RepositoryUrl>https://github.com/GranDen-Corp/GranDen.TimeLib.ClockShaft</RepositoryUrl>
-        <PublishRepositoryUrl>true</PublishRepositoryUrl>
-        <PackageProjectUrl>https://github.com/GranDen-Corp/GranDen.TimeLib.ClockShaft</PackageProjectUrl>
-        <IncludeSymbols>true</IncludeSymbols>
-        <SymbolPackageFormat>snupkg</SymbolPackageFormat>
-        <PackageTags>date time timezone aspnetcore configuration options</PackageTags>
-        <Company>GranDen Inc.</Company>
-        <Authors>Isak Pao</Authors>
-        <Description>Helper method and class for support ASP.NET Core Options pattern in GranDen.TimeLib.ClockShaft library</Description>
-    </PropertyGroup>
+	<PropertyGroup>
+		<TargetFrameworks>netstandard2.0;netstandard2.1;net6.0</TargetFrameworks>
+		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+		<Title>DateTime Utility</Title>
+		<Copyright>Copyright (c) 2020 GranDen Corp.(狂點軟體開發)</Copyright>
+		<PackageLicenseExpression>MIT</PackageLicenseExpression>
+		<RepositoryType>git</RepositoryType>
+		<RepositoryUrl>https://github.com/GranDen-Corp/GranDen.TimeLib.ClockShaft</RepositoryUrl>
+		<PublishRepositoryUrl>true</PublishRepositoryUrl>
+		<PackageProjectUrl>https://github.com/GranDen-Corp/GranDen.TimeLib.ClockShaft</PackageProjectUrl>
+		<IncludeSymbols>true</IncludeSymbols>
+		<SymbolPackageFormat>snupkg</SymbolPackageFormat>
+		<PackageTags>date time timezone aspnetcore configuration options</PackageTags>
+		<Company>GranDen Inc.</Company>
+		<Authors>Isak Pao</Authors>
+		<Description>Helper method and class for support ASP.NET Core Options pattern in GranDen.TimeLib.ClockShaft library</Description>
+	</PropertyGroup>
 
-    <ItemGroup>
-        <FrameworkReference Include="Microsoft.AspNetCore.App" />
-    </ItemGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+		<DocumentationFile>./GranDen.TimeLib.ClockShaft.Options.xml</DocumentationFile>
+	</PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
-        <DocumentationFile>./GranDen.TimeLib.ClockShaft.Options.xml</DocumentationFile>
-    </PropertyGroup>
+	<PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
+		<DocumentationFile>./GranDen.TimeLib.ClockShaft.Options.xml</DocumentationFile>
+	</PropertyGroup>
 
-    <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-        <DocumentationFile>./GranDen.TimeLib.ClockShaft.Options.xml</DocumentationFile>
-    </PropertyGroup>
+	<ItemGroup>
+		<None Remove="GranDen.TimeLib.ClockShaft.Options.xml" />
+	</ItemGroup>
 
-    <ItemGroup>
-        <None Remove="GranDen.TimeLib.ClockShaft.Options.xml" />
-    </ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'net6.0'">
+		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="6.0.0" />
+		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="6.0.0" />
+	</ItemGroup>
 
-    <ItemGroup>
-        <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="5.0.0" />
-        <PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.0.0" PrivateAssets="All" />
-    </ItemGroup>
+	<ItemGroup Condition="'$(TargetFramework)' == 'netstandard2.0' or '$(TargetFramework)' == 'netstandard2.1'">
+		<PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="3.1.21" />
+		<PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.21" />
+	</ItemGroup>
 
-    <ItemGroup>
-      <ProjectReference Include="..\GranDen.TimeLib.ClockShaft\GranDen.TimeLib.ClockShaft.csproj" />
-    </ItemGroup>
+	<ItemGroup>
+		<PackageReference Include="Microsoft.SourceLink.GitHub" Version="1.1.1">
+			<PrivateAssets>all</PrivateAssets>
+			<IncludeAssets>runtime; build; native; contentfiles; analyzers</IncludeAssets>
+		</PackageReference>
+	</ItemGroup>
+
+	<ItemGroup>
+		<ProjectReference Include="..\GranDen.TimeLib.ClockShaft\GranDen.TimeLib.ClockShaft.csproj" />
+	</ItemGroup>
 
 
 </Project>
