--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -1,8 +1,8 @@
 <Project>
   <PropertyGroup>
-    <Version Condition=" '$(Version)'=='' ">1.0.2</Version>
-    <PackageReleaseNotes>1.0.2 : 
-      &#xD;&#xA;Update Microsoft.Extensions.Options.ConfigurationExtensions package to .NET 5
+    <Version Condition=" '$(Version)'=='' ">1.1.0</Version>
+    <PackageReleaseNotes>1.1.0 : 
+      &#xD;&#xA;Upgraded to use .NET 6.0 SDK.
       &#xD;&#xA;
     </PackageReleaseNotes>
   </PropertyGroup>
