--- a/src/GranDen.TimeLib.ClockShaft/GranDen.TimeLib.ClockShaft.csproj
+++ b/src/GranDen.TimeLib.ClockShaft/GranDen.TimeLib.ClockShaft.csproj
@@ -1,10 +1,10 @@
 <Project Sdk="Microsoft.NET.Sdk">
 
 	<PropertyGroup>
-		<TargetFrameworks>netstandard2.0;netstandard2.1</TargetFrameworks>
+		<TargetFrameworks>netstandard2.0;netstandard2.1;net6.0</TargetFrameworks>
 		<GeneratePackageOnBuild>false</GeneratePackageOnBuild>
 		<Title>DateTime Utility</Title>
-		<Copyright>Copyright (c) 2020 GranDen Corp.(狂點軟體開發)</Copyright>
+		<Copyright>Copyright (c) 2021 GranDen Corp.(狂點軟體開發)</Copyright>
 		<PackageLicenseExpression>MIT</PackageLicenseExpression>
 		<RepositoryType>git</RepositoryType>
 		<RepositoryUrl>https://github.com/GranDen-Corp/GranDen.TimeLib.ClockShaft</RepositoryUrl>
