--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,10 +54,15 @@ stages:
       - job: Test
         steps:
           - task: UseDotNet@2
-            displayName: Use .NET 6.0 SDK
+            displayName: Install .NET 6.0 SDK
             inputs:
               version: $(sdkVersion)
               includePreviewVersions: ${{ parameters.usePreviewSDK }}
+              packageType: sdk
+          - task: UseDotNet@2
+            displayName: Install .NET Core 3.1 SDK
+            inputs:
+              version: 3.1.x
               packageType: sdk
           - task: DotNetCoreCLI@2
             inputs:
