--- a/src/Directory.Build.props
+++ b/src/Directory.Build.props
@@ -2,8 +2,8 @@
   <PropertyGroup>
     <Version Condition=" '$(Version)'=='' ">1.1.0</Version>
     <PackageReleaseNotes>1.1.0 : 
-      &#xD;&#xA;Upgraded to use .NET 6.0 SDK.
-      &#xD;&#xA;
+      &#xD;&#xA;1. Upgraded to use .NET 6.0 SDK.
+      &#xD;&#xA;2. Support C# 8 Nullable Reference Types.
     </PackageReleaseNotes>
   </PropertyGroup>
 </Project>
