--- a/src/GranDen.TimeLib.ClockShaft/GranDen.TimeLib.ClockShaft.csproj
+++ b/src/GranDen.TimeLib.ClockShaft/GranDen.TimeLib.ClockShaft.csproj
@@ -3,6 +3,7 @@
     <PropertyGroup>
         <TargetFrameworks>netstandard2.0;netstandard2.1;net6.0</TargetFrameworks>
         <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+        <ContinuousIntegrationBuild>true</ContinuousIntegrationBuild>
         <Title>DateTime Utility</Title>
         <Copyright>Copyright (c) 2022 GranDen Corp.(狂點軟體開發)</Copyright>
         <PackageLicenseExpression>MIT</PackageLicenseExpression>
@@ -30,8 +31,16 @@
         <DocumentationFile>./GranDen.TimeLib.ClockShaft.xml</DocumentationFile>
     </PropertyGroup>
 
+    <PropertyGroup>
+        <PackageReadmeFile>README.md</PackageReadmeFile>
+    </PropertyGroup>
+
     <ItemGroup>
-        <None Remove="GranDen.TimeLib.ClockShaft.xml"/>
+        <None Remove="GranDen.TimeLib.ClockShaft.xml" />
+    </ItemGroup>
+
+    <ItemGroup>
+        <None Include="docs/README.md" Pack="true" PackagePath="\" />
     </ItemGroup>
 
     <ItemGroup>
