--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,14 +1,14 @@
 # This is a basic workflow to help you get started with Actions
 
-name: "build library src"
+name: "build and test src"
 
 # Controls when the action will run. 
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   push:
-    branches: [ main, dev, feature/*, hotfix/*, bugfix/* ]
+    branches: [ main, dev, 'feature/*', 'hotfix/*', 'bugfix/*' ]
     paths-ignore:
-     - 'scripts/**'
+      - 'scripts/**'
   pull_request:
     branches: [ main, dev ]
 
@@ -17,8 +17,7 @@ on:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
-  # This workflow contains a single job called "build"
-  build:
+  build_and_test:
     # The type of runner that the job will run on
     runs-on: ubuntu-latest
     # Steps represent a sequence of tasks that will be executed as part of the job
@@ -30,4 +29,16 @@ jobs:
         with:
           global-json-file: global.json
       - name: Build
+        id: build_src
         run: dotnet build --configuration Release
+      - name: Install .NET SDK for run tests
+        if: steps.build_src.outcome == 'success'
+        uses: actions/setup-dotnet@v2
+        with:
+          dotnet-version: |
+            3.1.x
+            6.x.x
+      - name: Run tests
+        run: |
+          ./run_test.ps1
+        shell: pwsh
