--- a/.github/workflows/xxxxx.yml
+++ b/.github/workflows/xxxxx.yml
@@ -4,6 +4,8 @@ on:
     workflows: [ "build and test src" ]
     types: [ completed ]
 
+  workflow_dispatch:
+    
 jobs:
   on-success:
     runs-on: ubuntu-latest
