--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,4 +43,9 @@ jobs:
       - name: Create code coverage report
         run: |
           dotnet tool install -g dotnet-reportgenerator-globaltool
-          reportgenerator -reports:${{github.workspace}}/**/TestResult/Coverage/*.cobertura.xml -targetdir:${{github.workspace}}/CodeCoverage -reporttypes:'Cobertura'    
+          reportgenerator -reports:${{github.workspace}}/**/TestResult/Coverage/*.cobertura.xml -targetdir:${{github.workspace}}/CodeCoverage -reporttypes:'HTML'    
+      - name: Archive code coverage results
+        uses: actions/upload-artifact@v3
+        with:
+          name: code-coverage-report
+          path: ${{github.workspace}}/CodeCoverage/*.html
