--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,4 +48,4 @@ jobs:
         uses: actions/upload-artifact@v3
         with:
           name: code-coverage-report
-          path: ${{github.workspace}}/CodeCoverage/*.html
+          path: ${{github.workspace}}/CodeCoverage
