Try get version from powershell script

--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -1,18 +1,24 @@
 name: "create github release"
 
 on:
-  push:
-    tags:
-      - "v*"
+  workflow_dispatch:
 
 jobs:
   tagged-release:
     name: "Tagged Release"
     runs-on: "ubuntu-latest"
     steps:
+      - name: "Get Version info from src/Directory.Build.props"
+        id: "get_version"
+        shell: pwsh
+        run: |
+          $version_info = ./scripts/get_build_version.ps1
+          echo ::set-output name=version_info::$($version_info)
       # Create GitHub.com Release
       - name: "Create GitHub Release"
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          automatic_release_tag: "${{ steps.get_version.outputs.version_info.OriginalVersion }}"
+          prerelease: true
       
