--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -12,7 +12,8 @@ jobs:
         id: "get_version"
         shell: pwsh
         run: |
-          $version_info = & ${{github.workspace}}/scripts/get_build_version.ps1
+          cat ./scripts/get_build_version.ps1
+          $version_info = & ./scripts/get_build_version.ps1
           echo ::set-output name=version_info::$($version_info)
       # Create GitHub.com Release
       - name: "Create GitHub Release"
