--- a/.github/workflows/create_release.yml
+++ b/.github/workflows/create_release.yml
@@ -8,11 +8,11 @@ jobs:
     name: "Tagged Release"
     runs-on: "ubuntu-latest"
     steps:
+      - uses: actions/checkout@v3
       - name: "Get Version info from src/Directory.Build.props"
         id: "get_version"
         shell: pwsh
         run: |
-          cat ./scripts/get_build_version.ps1
           $version_info = & ./scripts/get_build_version.ps1
           echo ::set-output name=version_info::$($version_info)
       # Create GitHub.com Release
